--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3-dars 2-oy</title>
+    <link rel="stylesheet" href="styles/css/main.css">
 </head>
 <body>
     <div class="container">
@@ -13,7 +14,7 @@
 
 
 
-        
+
     </div>
 
 
